[sdi] quick fix on mobile

--- a/style/sdi-mobile.less
+++ b/style/sdi-mobile.less
@@ -72,6 +72,7 @@
     }
 
     .header {
+        flex-shrink: 0;
         display: flex;
         // flex-direction: column;
         flex-wrap: wrap;
